2006-01-16  Ville Vainio  <vivainio@gmail.com>

	* Reverted back to old %edit functionality that returns
	file contents on exit.

2006-01-14  Ville Vainio  <vivainio@gmail.com>

	* IPython/ipapi.py (ashook, asmagic, options): Added convenience 
	ipapi decorators for python 2.4 users, options() provides access to rc 
	data.
	
	* IPython/Magic.py (magic_cd): %cd now accepts backslashes
	as path separators (even on Linux ;-). Space character after 
	backslash (as yielded by tab completer) is still space;
	"%cd long\ name" works as expected.

	* IPython/ipapi.py,hooks.py,iplib.py: Hooks now implemented
	as "chain of command", with priority. API stays the same, 
	TryNext exception raised by a hook function signals that 
	current hook failed and next hook should try handling it, as 
	suggested by Walter Dörwald <walter@livinglogic.de>. Walter also
	requested configurable display hook, which is now implemented.

2006-01-13  Ville Vainio  <vivainio@gmail.com>

	* IPython/platutils*.py: platform specific utility functions,
	so far only set_term_title is implemented (change terminal
	label in windowing systems). %cd now changes the title to
	current dir.

	* IPython/Release.py: Added myself to "authors" list, 
	had to create new files.
	
	* IPython/iplib.py (handle_shell_escape): fixed logical flaw in
	shell escape; not a known bug but had potential to be one in the
	future.

	* IPython/ipapi.py (added),OInspect.py,iplib.py: "Public" 
	extension API for IPython! See the module for usage example. Fix 
	OInspect for docstring-less magic functions.
	

2006-01-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (raw_input): temporarily deactivate all
	attempts at allowing pasting of code with autoindent on.  It
	introduced bugs (reported by Prabhu) and I can't seem to find a
	robust combination which works in all cases.  Will have to revisit
	later.

	* IPython/genutils.py: remove isspace() function.  We've dropped